tests/fixtures/errors/arith_no_method.z
# Arithmetic operators resolve as declared methods: bool declares no `+`, so
# `bool + 1` is a hard error naming the missing operator method rather than a
# generic "requires numeric operands" note.
main: function is {
    b: true
    x: b + 1
    print "\{x}"
}
